# TimeTrackerPro

./: .env  .env.example  .env.ios  .gitignore  .mcp.json  .npmrc  AGENTS.md  AUTHENTICATION.md  CHANGELOG.md  CLAUDE.md  FEATURES.md  Integration.md  README-EXT.md  README.md  SECURITY.md  SUPABASE.md  capacitor.config.ts  data-recovery.js  debug-archive.js  electron.vite.config.ts  emergency-migration.js  enhanced-recovery-check.js  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  test-csv-import.js  test-error-handling.js  test-full-import.js  test-toast-notification.md  vite.config.ts  vite.electron.config.ts  vitest.auto-time.config.ts
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
agents/: architecture.md  conventions.md  operations.md  pitfalls.md  pull_requests.md  styles.md  testing.md  workflow.md
dev-dist/: sw.js
docs/: ARCHIVING_DAYS.md  AUTHENTICATION.md  AUTH_DATA_PERSISTENCE_FIX.md  CI_CD.md  CSV_TEMPLATES_README.md  ELECTRON_CODE_SIGNING.md  MIGRATION.md  SCHEMA_COMPATIBILITY.md  SECURITY.md  SQL_BACKEND.md  TESTING.md  chatbot.md
electron/: main.test.ts  main.ts  menu.test.ts  menu.ts  preload.test.ts  preload.ts  tsconfig.json  updater.test.ts  updater.ts
info/: README-LOVABLE.md
notes/: chatbot.md
public/: csv-import-guide.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs  main.rs  menu.rs  quit_flush.rs
(+299 files in other folders)
