[package]
name = "timetraked"
version = "1.10.1"
description = "A time tracking application built for freelancers, consultants, and professionals."
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
tokio = { version = "1", features = ["fs", "sync", "time", "rt"] }

[dev-dependencies]
tempfile = "3"
